--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -106,7 +106,7 @@ display: flex;
 }
 
 .body-text h1{
-  font-size: 80px;
+  font-size: 70px;
   margin:0 auto;
 }
 
@@ -132,6 +132,7 @@ p span{
 @media only screen and (max-width: 1060px) {
   #body{
     flex-wrap: wrap;
+    width: 100%;
   }
 
   .body-img{
